log/build_2023-10-28_13-49-49/euler_angle_extractor/stdout_stderr.log
running egg_info
writing ../../../build/euler_angle_extractor/euler_angle_extractor.egg-info/PKG-INFO
writing dependency_links to ../../../build/euler_angle_extractor/euler_angle_extractor.egg-info/dependency_links.txt
writing entry points to ../../../build/euler_angle_extractor/euler_angle_extractor.egg-info/entry_points.txt
writing requirements to ../../../build/euler_angle_extractor/euler_angle_extractor.egg-info/requires.txt
writing top-level names to ../../../build/euler_angle_extractor/euler_angle_extractor.egg-info/top_level.txt
reading manifest file '../../../build/euler_angle_extractor/euler_angle_extractor.egg-info/SOURCES.txt'
writing manifest file '../../../build/euler_angle_extractor/euler_angle_extractor.egg-info/SOURCES.txt'
running build
running build_py
copying euler_angle_extractor/euler_angle_extractor.py -> /home/keenan/Documents/rice_device/build/euler_angle_extractor/build/lib/euler_angle_extractor
running install
running install_lib
copying /home/keenan/Documents/rice_device/build/euler_angle_extractor/build/lib/euler_angle_extractor/euler_angle_extractor.py -> /home/keenan/Documents/rice_device/install/euler_angle_extractor/lib/python3.10/site-packages/euler_angle_extractor
byte-compiling /home/keenan/Documents/rice_device/install/euler_angle_extractor/lib/python3.10/site-packages/euler_angle_extractor/euler_angle_extractor.py to euler_angle_extractor.cpython-310.pyc
  File "/home/keenan/Documents/rice_device/install/euler_angle_extractor/lib/python3.10/site-packages/euler_angle_extractor/euler_angle_extractor.py", line 21
    self.get_logger().info('I heard: "%s"' % msg.orientation.)
                                                             ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/keenan/Documents/rice_device/install/euler_angle_extractor/lib/python3.10/site-packages/euler_angle_extractor-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../../build/euler_angle_extractor/euler_angle_extractor.egg-info to /home/keenan/Documents/rice_device/install/euler_angle_extractor/lib/python3.10/site-packages/euler_angle_extractor-0.0.0-py3.10.egg-info
running install_scripts
Installing euler_angle_extractor script to /home/keenan/Documents/rice_device/install/euler_angle_extractor/lib/euler_angle_extractor
writing list of installed files to '/home/keenan/Documents/rice_device/build/euler_angle_extractor/install.log'
